--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,60 @@
 {
-  "rules": {
-    "indent": [ 2, 2 ]
+  "parserOptions": {
+    "ecmaVersion": 9,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
-  "extends": "hapi",
+  "extends": "eslint:recommended",
   "env": {
-    "mocha": true
+    "node": true,
+    "mocha": true,
+    "commonjs": true,
+    "es6": true
+  },
+  "rules": {
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
+    ],
+    "require-atomic-updates": 0, //https://github.com/eslint/eslint/issues/11899
+    "indent": [
+      "error",
+      4,
+      {
+        "SwitchCase": 1,
+        "MemberExpression": 0
+      }
+    ],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
+    "prefer-template": 2,
+    "keyword-spacing": 2,
+    "dot-location": [
+      "error",
+      "property"
+    ],
+    "no-class-assign": 0,
+    "no-case-declarations": 0,
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "never"
+    ],
+    "strict": 2
   }
 }
