--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "awis",
-  "version": "1.0.10",
+  "name": "forked-awis",
+  "version": "1.0.11",
   "description": "Node.js client for the Alexa Web Information Service.",
   "keywords": [
     "awis",
@@ -9,31 +9,30 @@
   "license": "MIT",
   "author": "WRANGR <hi@wrangr.com>",
   "maintainers": [
-    "lupomontero <lupomontero@gmail.com> (http://lupomontero.com)"
+    "lupomontero <lupomontero@gmail.com> (http://lupomontero.com)",
+    "rachelslurs <rachelcantor@gmail.com> (https://github.com/rachelslurs)"
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:wrangr/awis.git"
+    "url": "git@github.com:rachelslurs/awis.git"
   },
   "bugs": {
-    "url": "https://github.com/wrangr/awis/issues"
+    "url": "https://github.com/rachelslurs/awis/issues"
   },
   "dependencies": {
-    "aws4": "^1.6.0",
+    "aws-sdk": "^2.597.0",
+    "aws4": "^1.9.0",
     "lodash": "^4.17.4",
-    "request": "^2.83.0",
-    "xml2js": "^0.4.19"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "dotenv": "^5.0.0",
     "eslint": "^4.16.0",
-    "eslint-config-hapi": "^11.0.0",
-    "eslint-plugin-hapi": "^4.1.0",
     "mocha": "^5.0.0"
   },
   "scripts": {
-    "pretest": "./node_modules/.bin/eslint .",
-    "test": "./node_modules/.bin/mocha -r dotenv/config --timeout=10000 test"
+    "test": "./node_modules/.bin/mocha -r dotenv/config --timeout=5000 test"
   },
   "engines": {
     "node": ">= 4.0.x"
